--- a/packages/sapphire-components/package.json
+++ b/packages/sapphire-components/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@otterbots/sapphire-components",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Sapphire components for OtterBots bots",
   "main": "dist/",
   "repository": "https://github.com/Otter-Bots/Subpackages.git",
@@ -21,5 +21,7 @@
   "devDependencies": {
     "@types/node": "^17.0.36"
   },
-  "publishConfig": { "access": "public" }
+  "publishConfig": {
+    "access": "public"
+  }
 }
