--- a/package.json
+++ b/package.json
@@ -5,5 +5,7 @@
         "packages/*"
     ],
     "scripts": {},
-    "devDependencies": {}
+    "devDependencies": {
+        "typescript": "^4.7.4"
+    }
 }
