FUCKING FIX EXPORTS

--- a/packages/blacklist-plugin/package.json
+++ b/packages/blacklist-plugin/package.json
@@ -26,8 +26,15 @@
     "access": "public"
   },
   "exports": {
-    "import": "./dist/index.js",
-    "require": "./dist/index.js",
-    "types": "./dist/index.d.ts"
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    },
+    "./register": {
+      "import": "./register.js",
+      "require": "./register.js",
+      "types": "./register.d.ts"
+    }
   }
 }
